Fixed the aligning of the work Section

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -134,9 +134,8 @@ main {
 }
 
 /* Styling for the Work section */
-.apps {
-    display: flex;
-    flex-wrap: wrap;
+#apps {
+    width: 80%;
 }
 
 
